--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,10 @@ body{
     font-weight: 700;
     border: 2px solid;
     padding: 6px;
-    border-radius: 80%;
+    border-radius: 30%;
+    height: 60px;
+    width: 20px;
+		text-align:center;
 }
 
 .down__arrow a i {
