--- a/css/style.css
+++ b/css/style.css
@@ -147,11 +147,18 @@ a{
 
 .link {
     flex-grow: 2;
-    width: 125px;
+    width: 242px;
+    background-position-x: 42% !important;
+    background-position-y: 50% !important;
 }
 
 .articles__title {
     font-size: 20px;
+}
+
+.article__contents div {
+    padding: 2px 10px;
+    width: -2px;
 }
 
 .articles__description {
